[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 110

[tool.poetry]
name = 'shifter-jupyterlab'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lnetatmo = "4.2.0"
graphyte = "1.7.1"
unidecode = "1.3.8"

[tool.poetry.group.dev.dependencies]
prospector = { extras = ["with_bandit", "with_mypy"], version = "1.13.3" }
prospector-profile-duplicated = "1.8.0"
setuptools="75.6.0"
