[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = 'netatmo2graphite'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.scripts]
netatmo2graphite = 'netatmo2graphite.py:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lnetatmo = "4.2.0"
graphyte = "1.7.1"
unidecode = "1.3.8"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.15.0", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff" ] }
prospector-profile-utils = "1.21.4"
prospector-profile-duplicated = "1.10.4"
setuptools="75.8.0"
